# stendo

./: 0.json  Cargo.toml
assets/: 0.json
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/process/: mod.rs
