[package]
name = "stendo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stendo"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serde = "1.0.152"
serde_json = "1.0.91"
sugar-cli = "1.2.2"
thiserror = "1.0.38"
